Setting white-space to non-default value dynamically on a blank (whitespace/new line) does not work correctly https://bugs.webkit.org/show_bug.cgi?id=239689 <rdar://problem/92559818>

Reviewed by Antti Koivisto.

Let's consider constructing a renderer for whitespace only content when we need to preserve whitespace as the result of a style change.

css/css-variables/css-variable-change-style-001: progression.

* LayoutTests/fast/text/text-node-needs-renderer-after-style-change-expected.html: Added.
* LayoutTests/fast/text/text-node-needs-renderer-after-style-change.html: Added.
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::updateRenderTree):

Canonical link: https://commits.webkit.org/276277@main